refactor: 强化领域枚举与数据聚合逻辑